# rotr

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
config/: server.yaml
src/: Cluster.cpp  Cluster.h  ClusterHandler.cpp  ClusterHandler.h  ClusterServiceImpl.cpp  ClusterServiceImpl.h  Configuration.cpp  Configuration.h  ElectionServiceImpl.cpp  ElectionServiceImpl.h  InMemoryStore.cpp  InMemoryStore.h  Node.cpp  Node.h  PersistentStore.cpp  PersistentStore.h  RaftInternalRPCServiceImpl.cpp  RaftInternalRPCServiceImpl.h  ReplicationServiceImpl.cpp  ReplicationServiceImpl.h  RotrApp.cpp  RotrApp.h  RotrServiceImpl.cpp  RotrServiceImpl.h
src/common/: Container.cpp  Container.h  Logger.h  NetUtils.h  RocksDBClient.cpp  RocksDBClient.h  ThreadGuard.h  Utils.h  anyoption.cpp  anyoption.h
src/proto/: rotr.proto
